name:                diskworld
version:             0.1
synopsis:            Game with moving disks collecting points
-- description:         
author:              Rishi <ashutoshrishi92@gmail.com>
-- copyright:           
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

data-files:
        assets/
                             

executable diskworld
  main-is:             Main.hs
  hs-source-dirs:      src/
  default-language:    Haskell2010
  build-depends: base
               , sdl2 >= 2.0.0
               , linear
               , containers
               , AC-Angle

