name:                diskworld
version:             0.1.0.0
synopsis:            Game of disks 
description:         Please see README.md
homepage:            http://github.com/ashutoshrishi/diskworld
license:             BSD3
license-file:        LICENSE
author:              Ashutosh Rishi Ranjan
maintainer:          ashutoshrishi92@gmail.com
copyright:           2016 Ashutosh Rishi Ranjan
category:            Games, Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

data-files: assets/*.bmp
                                

executable diskworld
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , sdl2 >= 2.0.0
               , linear
               , containers
               , AC-Angle
  default-language:    Haskell2010

test-suite diskworld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , diskworld
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ashutoshrishi/diskworld
