name:                diskworld
version:             0.1.0.0
synopsis:            Game of disks 
description:         Please see README.md
homepage:            http://github.com/ashutoshrishi/diskworld
license:             BSD3
license-file:        LICENSE
author:              Ashutosh Rishi Ranjan
maintainer:          ashutoshrishi92@gmail.com
copyright:           2016 Ashutosh Rishi Ranjan
category:            Games, Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

data-files: assets/*.bmp
                                

executable diskworld
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends: AC-Angle
               , base
               , containers
               , linear
               , mtl == 2.2.1
               , sdl2 == 2.1.2.1
               , transformers == 0.4.2.0
  default-language:    Haskell2010

